styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');

/* Colors */
:root {
  color-scheme: light dark;
  
  --white: #f5f4f3;
  --black: #111927;
  --dark: #283D4F;
  --bright: #0071CE;  
  --distract: #e6b14e;  
  
}

@media (prefers-color-scheme: light) {
  :root {
    /* Text */
    --primary: var(--black);
    /* Background */
    --secondary: var(--white); 
    /* Contrast: Headers, dots, special text */
    --contrast: var(--dark); 
    /* Accent: Not really used lol */
    --accent: var(--bright);

  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --primary: var(--white);
    --secondary: var(--black); 
    --contrast: var(--bright);
    --accent: var(--dark);

  }
}

html {
  scroll-behavior: smooth;
  overflow-x: hidden; 
  width: 100dvw;
  scroll-padding-top: 6rem;

}

body {
  padding: 0;
  margin: 0;
  font-family: monospace;
  font-size: 1em;
  color: var(--primary);
  background-color: var(--secondary);

}

body * {
  text-decoration-thickness: .15rem;

}

h1 {
  color: var(--primary);
  font-family: "Paytone One", Impact;

}

h1:not(:has(a)) {
  border-bottom: solid .25rem var(--contrast);

}

h2 {
  color: var(--primary);
  font-family: "Paytone One", Impact;
  margin: 0;
  
}

h3 {
  color: var(--contrast);
  filter: brightness(1.75);
  font-family: "Paytone One", Impact;

}

img {
  max-width: 100%;
  max-height: 100%; 
  
}

a {
  text-decoration-color: var(--distract);
  color: inherit; 

}

p {
  line-height: 1.15rem; 
  
}

blockquote {
  margin: 1rem;
  padding: 1rem !important; 
  backdrop-filter: contrast(0.8);
  border-radius: 1rem;
  
}

i {
  color: var(--contrast);
  font-size: 2.5rem;

}

pre {
  border-radius: 1rem;
  padding: 1rem !important;
  backdrop-filter: contrast(0.8);

}


ul ul {
  /* padding: 0.25rem; */
  margin: 0.75rem !important;

}

ul > li {
  margin: 0.25rem 0;

}

